--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <serenity.version>2.0.81</serenity.version>
+        <java.version>11</java.version>
     </properties>
 
     <pluginRepositories>
