--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                 <configuration>
                     <!-- https://groups.google.com/g/thucydides-users/c/Mv5GYtrls_Q -->
                     <!-- skip>true</skip-->
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --permit-illegal-access</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
